refresh flight data
